# Wet1DS-2024

./: AVL_tree.h  CMakeLists.txt  Contestant.cpp  Contestant.h  ContestantID.cpp  ContestantID.h  ContestantStr.cpp  ContestantStr.h  Country.cpp  Country.h  Node.h  Olympicsa1.cpp  Olympicsa1.h  StrCond.cpp  StrCond.h  Team.cpp  Team.h  a.out  maina1.cpp  rankTreeTester.cpp  test1.in  tester.cpp
testers/: printTrees (code to put in Team and in AVLTree for checks  tester.cpp  tester2.in
